# swordfish

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  submission.py
.github/workflows/: build-autoresearch-image.yml  build-swordfish-image.yml  ci.yml
bench/: eval_ppl.py  profile_marlin.sh  roofline.py  run_bench.py  shapes.py
deploy/: README.md
deploy/image/: Dockerfile  bootstrap.sh  build.sh  entrypoint.sh  run.sh
deploy/values/: voice-agent-flex.yaml
docs/: benchmarking.md  contributions.md  correctness.md  design.md  lane-quantization.md  lessons-rvllm.md  roadmap.md  shapes.md
docs/airun/: a100-ncu-blocker.md  h200-blocker-handoff.md  triage-log.md
docs/dashboard/: app.js  completion-report.md  index.html  results-index.json  styles.css
docs/notes/: cutlass-cute-first-touch.md  jax-pallas-first-touch.md  jd-coverage-inferact.md  jd-coverage-tilt-2026-w1.md  jd-target-criteria.md  liger-first-touch.md  ort-cuda-ep.md  pytorch-inductor-first-repro.md  tilelang-first-touch.md  triton-first-repro.md  vllm-arch.md  week1-tuesday-handoff.md
docs/profiling/: INDEX.md  RUN_ME_ON_A100.md  marlin-bottlenecks.md
docs/research/: pyptx-pr1-concepts-20260427.md  what-can-beat-liger-fsdp-a100-20260503.md
experiments/: README.md  liger_rmsnorm.py  liger_swiglu.py
swordfish/: __init__.py  marlin_compat.py  pack.py  reference.py
tests/: test_bench_l0.py  test_dispatch.py  test_marlin_compat.py  test_ncu_optimize.py  test_pack.py  test_reference.py  test_runner.py  test_transformer_reference.py  test_trimul_submission.py
(+112 files in other folders)
