[project]
name = "swordfish"
version = "0.0.1"
description = "Ampere-native INT4 x FP16 decode kernels for A100 voice-agent inference"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "chokevin" }]
dependencies = [
    "torch>=2.4",
    "triton>=3.0 ; sys_platform == 'linux'",
    "numpy>=1.26",
]

[project.optional-dependencies]
bench = [
    "tabulate>=0.9",
    "matplotlib>=3.8",
    "pandas>=2.2",
]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swordfish"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
