[project]
name = "swordfish"
version = "0.0.1"
description = "Cross-architecture kernel benchmark lab for public upstream contributions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "chokevin" }]
dependencies = [
    "torch>=2.4",
    "triton>=3.0 ; sys_platform == 'linux'",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swordfish"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
